fetch products and fetch category

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT = 5000
 BASE_URL = "http://localhost:5173"
-DB_URL = "mongodb://localhost:27017/dormdeals"
+DB_URL = "mongodb+srv://YanakornS:0924077286Yan@cluster0.1adb7.mongodb.net/dormdeals"
 SECRET = "dormdeals-jwt"
 
 apiKey= "AIzaSyAu-O8EQV34VULclN2E7v9YYL94x7sKZqw"
