--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "install": "^0.13.0",
     "motion": "^12.4.7",
@@ -21,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "react-select": "^5.10.1",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.8"
