--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-select": "^5.10.1",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4",
-    "tailwindcss": "^4.0.8"
+    "tailwindcss": "^4.0.8",
+    "yet-another-react-lightbox": "^3.21.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
